plugins {
    id("java-library")
    id("maven-publish")

    id("net.minecrell.plugin-yml.bukkit") version "0.6.0"
    id("xyz.jpenilla.run-paper") version "3.0.0"
}

group = "me.danjono"
version = "1.6.2-SNAPSHOT"

repositories {
    maven("https://repo.papermc.io/repository/maven-public/")
}

dependencies {
    compileOnly("io.papermc.paper:paper-api:1.21.10-R0.1-SNAPSHOT")

    sequenceOf(
        "org.spongepowered:configurate-gson:4.2.0",
    ).forEach {
        compileOnly(it)
        library(it)
    }
}

java {
    withSourcesJar()
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
        vendor = JvmVendorSpec.ADOPTIUM
    }
}

publishing {
    publications.create<MavenPublication>("maven") {
        artifactId = project.name.lowercase()
        from(components["java"])
    }
}

tasks {
    withType<JavaCompile> {
        options.release = 21
        options.encoding = Charsets.UTF_8.name()
        options.compilerArgs.add("-Xlint:unchecked")
        options.compilerArgs.add("-Xlint:deprecation")
    }

    runServer {
        minecraftVersion("1.21.10")
    }
}

bukkit {
    main = "me.danjono.inventoryrollback.InventoryRollbackMain"
    authors = listOf("danjono", "booky10")
    apiVersion = "1.21.9"
}
